force-app/main/default/objects/Partner_Onboarding_Request__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <label>Territory</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>LATAM</fullName>
            </value>
            <value>
                <fullName>NEUR (NL, BE, LU, NO, DK, SE, FI)</fullName>
            </value>
            <value>
                <fullName>UK/I</fullName>
            </value>
            <value>
                <fullName>SEUR (FR, IT, ES, PT)</fullName>
            </value>
            <value>
                <fullName>CEUR (DE, AT, CH, EASTERN EUR)</fullName>
            </value>
            <value>
                <fullName>MEA (MIDDLE EAST AND AFRICA)</fullName>
            </value>
            <value>
                <fullName>RUSSIA AND CIS</fullName>
            </value>
            <value>
                <fullName>ASEAN</fullName>
            </value>
            <value>
                <fullName>ANZ</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>KOREA</fullName>
            </value>
            <value>
                <fullName>GCC</fullName>
            </value>
            <value>
                <fullName>Africa</fullName>
                <isActive>false</isActive>
                <label>Africa</label>
            </value>
            <value>
                <fullName>Albania</fullName>
                <isActive>false</isActive>
                <label>Albania</label>
            </value>
            <value>
                <fullName>Algeria</fullName>
                <isActive>false</isActive>
                <label>Algeria</label>
            </value>
            <value>
                <fullName>Andorra</fullName>
                <isActive>false</isActive>
                <label>Andorra</label>
            </value>
            <value>
                <fullName>Angola</fullName>
                <isActive>false</isActive>
                <label>Angola</label>
            </value>
            <value>
                <fullName>Armenia</fullName>
                <isActive>false</isActive>
                <label>Armenia</label>
            </value>
            <value>
                <fullName>Australia</fullName>
                <isActive>false</isActive>
                <label>Australia</label>
            </value>
            <value>
                <fullName>Austria</fullName>
                <isActive>false</isActive>
                <label>Austria</label>
            </value>
            <value>
                <fullName>Azerbaijan</fullName>
                <isActive>false</isActive>
                <label>Azerbaijan</label>
            </value>
            <value>
                <fullName>Bahrain</fullName>
                <isActive>false</isActive>
                <label>Bahrain</label>
            </value>
            <value>
                <fullName>Belarus</fullName>
                <isActive>false</isActive>
                <label>Belarus</label>
            </value>
            <value>
                <fullName>Belgium</fullName>
                <isActive>false</isActive>
                <label>Belgium</label>
            </value>
            <value>
                <fullName>Benin</fullName>
                <isActive>false</isActive>
                <label>Benin</label>
            </value>
            <value>
                <fullName>Bosnia and Herzegovina</fullName>
                <isActive>false</isActive>
                <label>Bosnia and Herzegovina</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>