force-app/main/default/objects/Partner_Onboarding_Request__c/fields/Tertiary_Terms__c.field-meta.xml
<CustomField>
    <fullName>Tertiary_Terms__c</fullName>
    <label>ClickThroughContract-Tertiary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>