force-app/main/default/objects/Partner_Onboarding_Request__c/fields/Trade_Compliance_Screened__c.field-meta.xml
<CustomField>
    <fullName>Trade_Compliance_Screened__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trade Compliance Screened</label>
    <type>Checkbox</type>
</CustomField>