force-app/main/default/objects/Partner_Onboarding_Request__c/fields/Vendors_you_work_with_today__c.field-meta.xml
<CustomField>
    <fullName>Vendors_you_work_with_today__c</fullName>
    <label>Vendors you work with today</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Storage</fullName>
            </value>
            <value>
                <fullName>Backup</fullName>
            </value>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>