force-app/main/default/objects/Partner_Onboarding_Request__c/fields/Vendors_your_Org_works_with_today__c.field-meta.xml
<CustomField>
    <fullName>Vendors_your_Org_works_with_today__c</fullName>
    <label>Vendors partner works with today</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cisco</fullName>
            </value>
            <value>
                <fullName>Commvault</fullName>
            </value>
            <value>
                <fullName>Dell/EMC</fullName>
            </value>
            <value>
                <fullName>Microsoft</fullName>
            </value>
            <value>
                <fullName>Oracle</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>Veritas</fullName>
            </value>
            <value>
                <fullName>VMware</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>