force-app/main/default/objects/Partner_Onboarding_Request__c/fields/Violation_of_Anti_Corruption_Laws__c.field-meta.xml
<CustomField>
    <fullName>Violation_of_Anti_Corruption_Laws__c</fullName>
    <description>ITMKT21-9: Has there ever been any violation, voluntary self-disclosure, investigation, government inquiry, allegation, or enforcement action by, against, or involving your company or anyone working on its behalf related to anti-corruption laws?</description>
    <label>Violation of Anti Corruption Laws</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>