force-app/main/default/objects/Partner_Onboarding_Request__c/fields/Violation_of_Anti_Corruption_Laws_Notes__c.field-meta.xml
<CustomField>
    <fullName>Violation_of_Anti_Corruption_Laws_Notes__c</fullName>
    <description>ITMKT21-9: Explain if &quot;Yes&quot; to Violation of Anti Corruption Laws question</description>
    <label>Violation of Anti Corruption Laws Notes</label>
    <type>TextArea</type>
</CustomField>