force-app/main/default/objects/Partner_Onboarding_Request__c/recordTypes/Reseller.recordType-meta.xml
<RecordType>
    <fullName>Reseller</fullName>
    <active>true</active>
    <label>Reseller</label>
</RecordType>