force-app/main/default/objects/Partner_Onboarding_Request__c/recordTypes/Service_Delivery.recordType-meta.xml
<RecordType>
    <fullName>Service_Delivery</fullName>
    <active>true</active>
    <label>Service Delivery</label>
</RecordType>