force-app/main/default/objects/Partner_Onboarding_Request__c/validationRules/CompanyName_or_Account_is_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>CompanyName_or_Account_is_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW() &amp;&amp; (ISNULL(Account__c ) &amp;&amp; ISBLANK(Company_Name__c)) &amp;&amp; (RecordType.DeveloperName = &apos;Distributor&apos; || RecordType.DeveloperName = &apos;Service_Delivery&apos;)</errorConditionFormula>
    <errorMessage>Please enter either Company Name or Account</errorMessage>
</ValidationRule>