force-app/main/default/objects/Partner_Onboarding_Request__c/validationRules/Redirect_to_MSP_Qualification.validationRule-meta.xml
<ValidationRule>
    <fullName>Redirect_to_MSP_Qualification</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( SDP_Selling_Type__c , &apos;Consumption&apos;)</errorConditionFormula>
    <errorMessage>Please fill the details in &apos;MSP Qualification&apos; instead of Partner Onboarding form</errorMessage>
</ValidationRule>