force-app/main/default/objects/Partner_Onboarding_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Company_Name__c</columns>
    <columns>City__c</columns>
    <columns>Country__c</columns>
    <columns>Email__c</columns>
    <columns>Distributor__c</columns>
    <columns>PartnerType__c</columns>
    <columns>Partner_Onboarding_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Contract_Generation__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>