force-app/main/default/objects/Partner_Onboarding_Request__c/listViews/Approved_Partner_Onboarding_Request.listView-meta.xml
<ListView>
    <fullName>Approved_Partner_Onboarding_Request</fullName>
    <columns>NAME</columns>
    <columns>Partner_Onboarding_Status__c</columns>
    <columns>Company_Name__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Country__c</columns>
    <columns>Territory__c</columns>
    <filterScope>Everything</filterScope>
    <label>Approved Partner Onboarding Request</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>