force-app/main/default/objects/Partner_Onboarding_Request__c/listViews/Distributor_Finance_Partner_Onboarding_Request.listView-meta.xml
<ListView>
    <fullName>Distributor_Finance_Partner_Onboarding_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Distributor Finance</label>
    <queue>Distributor_Finance</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>