force-app/main/default/objects/Partner_Onboarding_Request__c/listViews/Distributor_Programs_Partner_Onboarding_Request.listView-meta.xml
<ListView>
    <fullName>Distributor_Programs_Partner_Onboarding_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Distributor Programs</label>
    <queue>Distributor_Programs</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>