force-app/main/default/objects/Partner_Onboarding_Request__c/listViews/Finance_Partner_Onboarding_Request.listView-meta.xml
<ListView>
    <fullName>Finance_Partner_Onboarding_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Finance</label>
    <queue>Finance</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>