force-app/main/default/objects/Partner_Onboarding_Request__c/listViews/Issue_Tracker.listView-meta.xml
<ListView>
    <fullName>Issue_Tracker</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Master_Terms__c</columns>
    <columns>Secondary_Terms__c</columns>
    <columns>Tertiary_Terms__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>equals</operation>
        <value>King</value>
    </filters>
    <label>Issue Tracker</label>
</ListView>