force-app/main/default/objects/Partner_Onboarding_Request__c/listViews/Legal_Partner_Onboarding_Request.listView-meta.xml
<ListView>
    <fullName>Legal_Partner_Onboarding_Request</fullName>
    <columns>NAME</columns>
    <columns>Company_Name__c</columns>
    <columns>Country__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>X319_API_Status__c</field>
        <operation>equals</operation>
        <value>In Process,Not Approved,Approved with Conditions</value>
    </filters>
    <label>Legal</label>
</ListView>