force-app/main/default/objects/Partner_Onboarding_Request__c/listViews/MSP_Approver_Partner_Onboarding_Request.listView-meta.xml
<ListView>
    <fullName>MSP_Approver_Partner_Onboarding_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>MSP Approver</label>
    <queue>MSP_Approver</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>