force-app/main/default/objects/Partner_Onboarding_Request__c/listViews/MSP_Legal_Partner_Onboarding_Request.listView-meta.xml
<ListView>
    <fullName>MSP_Legal_Partner_Onboarding_Request</fullName>
    <columns>NAME</columns>
    <columns>Agreed_Term_Conditions__c</columns>
    <columns>Company_Name__c</columns>
    <columns>Partner_Onboarding_Status__c</columns>
    <columns>PartnerType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PartnerType__c</field>
        <operation>equals</operation>
        <value>MSP,MSP-Reseller</value>
    </filters>
    <label>MSP Legal</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>