force-app/main/default/objects/Partner_Onboarding_Request__c/listViews/New_Partner_Onboarding_Request.listView-meta.xml
<ListView>
    <fullName>New_Partner_Onboarding_Request</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Partner_Onboarding_Status__c</columns>
    <columns>Company_Name__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Region__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Company_Name__c</field>
        <operation>notEqual</operation>
        <value>test</value>
    </filters>
    <label>New Partner Onboarding Request</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>