force-app/main/default/objects/Partner_Onboarding_Request__c/listViews/PartnerOps_Partner_Onboarding_Request.listView-meta.xml
<ListView>
    <fullName>PartnerOps_Partner_Onboarding_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>PartnerOps</label>
    <queue>PartnerOps</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>