force-app/main/default/objects/Partner_Onboarding_Request__c/listViews/ProgramOps_Partner_Onboarding_Request.listView-meta.xml
<ListView>
    <fullName>ProgramOps_Partner_Onboarding_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>ProgramOps</label>
    <queue>ProgramOps</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>