force-app/main/default/objects/Partner_Onboarding_Request__c/listViews/South_Africa_New_Partner_Onboarding_requ.listView-meta.xml
<ListView>
    <fullName>South_Africa_New_Partner_Onboarding_requ</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Company_Name__c</columns>
    <columns>City__c</columns>
    <columns>Country__c</columns>
    <columns>Email__c</columns>
    <columns>Distributor__c</columns>
    <columns>PartnerType__c</columns>
    <columns>Partner_Onboarding_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Contract_Generation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>South Africa</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>2/1/2023 12:00 AM</value>
    </filters>
    <label>South Africa New Partner Onboarding requ</label>
</ListView>