force-app/main/default/objects/Partner_Onboarding_Request__c/listViews/Tax_Partner_Onboarding_Request.listView-meta.xml
<ListView>
    <fullName>Tax_Partner_Onboarding_Request</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Partner_Onboarding_Request__c.Service_Delivery</value>
    </filters>
    <label>Tax</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>